--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=dating.db"
-  }
+  },
+  "tokenKey": "super secret key super secret key super secret key super secret key super secret key"
 }
